Update LoginPage, Add useFetch custom hook, wrap the app with AuthContextProvider, ...

--- a/src/styles/LoginPage.module.css
+++ b/src/styles/LoginPage.module.css
@@ -16,3 +16,10 @@
     color: var(--color-dark);
     text-align: center;
 }
+
+.errorText {
+    color: red;
+    text-align: center;
+    font-weight: 600;
+    margin: 10px 0 0 0;
+}
