Add all other pages along with their style pages

--- a/src/index.css
+++ b/src/index.css
@@ -2,83 +2,84 @@
 @tailwind components;
 @tailwind utilities;
 
-/*@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap");*/
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap'); */
 
 :root {
-    --color-primary: #6c9bcf;
-    --color-info: #6c9bcf;
-    --color-danger: red;
-    --color-error: red;
-    --color-success: #1b9c85;
-    --color-warning: #f7d060;
-    --color-white: #fff;
-    --color-info-dark: #7d8da1;
-    --color-dark: #363949;
-    --color-light: rgba(132, 139, 200, 0.18);
-    --color-dark-variant: #677483;
-    --color-background: #f6f6f9;
+	--color-primary: #6c9bcf;
+	--color-info: #6c9bcf;
+	--color-danger: red;
+	--color-error: red;
+	--color-success: #1b9c85;
+	--color-warning: #f7d060;
+	--color-white: #fff;
+	--color-info-dark: #7d8da1;
+	--color-dark: #363949;
+	--color-light: rgba(132, 139, 200, 0.18);
+	--color-dark-variant: #677483;
+	--color-background: #f6f6f9;
 
-    --card-border-radius: 2rem;
-    --border-radius-1: 0.4rem;
-    --border-radius-2: 1.2rem;
+	--card-border-radius: 2rem;
+	--border-radius-1: 0.4rem;
+	--border-radius-2: 1.2rem;
 
-    --card-padding: 1.8rem;
-    --padding-1: 1.2rem;
+	--card-padding: 1.8rem;
+	--padding-1: 1.2rem;
 
-    --box-shadow: 0 2rem 3rem var(--color-light);
+	--box-shadow: 0 2rem 3rem var(--color-light);
 }
 
 .dark-mode-variables {
-    --color-background: #181a1e;
-    --color-white: #202528;
-    --color-dark: #edeffd;
-    --color-dark-variant: #a3bdcc;
-    --color-light: rgba(0, 0, 0, 0.4);
-    --box-shadow: 0 2rem 3rem var(--color-light);
+	--color-background: #181a1e;
+	--color-white: #202528;
+	--color-dark: #edeffd;
+	--color-dark-variant: #a3bdcc;
+	--color-light: rgba(0, 0, 0, 0.4);
+	--box-shadow: 0 2rem 3rem var(--color-light);
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
-    font-family: "Poppins", sans-serif;
-    font-size: 0.88rem;
-    user-select: none;
-    overflow-x: hidden;
-    color: var(--color-dark);
-    background-color: var(--color-background);
+	width: 100vw;
+	height: 100vh;
+	font-family: 'Poppins', sans-serif;
+	font-size: 0.88rem;
+	user-select: none;
+	overflow-x: hidden;
+	color: var(--color-dark);
+	background-color: var(--color-background);
 }
 
 label {
-    font-weight: 600;
-    font-size: 1.2em;
+	font-weight: 600;
+	font-size: 1.2em;
 }
 
-select, textarea,
-input[type="text"],
-input[type="date"],
-input[type="number"],
-input[type="email"],
-input[type="file"],
-input[type="password"] {
-    background: var(--color-white);
-    color: var(--color-dark);
-    padding: 0.8rem;
-    border: 1px solid var(--color-dark-variant);
-    border-radius: var(--border-radius-1);
-    width: 100%;
-    margin: 0.8rem 0;
-    outline: none;
-    font-weight: 600;
-    font-size: 1.2em;
+select,
+textarea,
+input[type='text'],
+input[type='date'],
+input[type='number'],
+input[type='email'],
+input[type='file'],
+input[type='password'] {
+	background: var(--color-white);
+	color: var(--color-dark);
+	padding: 0.8rem;
+	border: 1px solid var(--color-dark-variant);
+	border-radius: var(--border-radius-1);
+	width: 100%;
+	margin: 0.8rem 0;
+	outline: none;
+	font-weight: 600;
+	font-size: 1.2em;
 }
 
 button {
-    transition: .2s;
-    width: 100%;
+	transition: 0.2s;
+	width: 100%;
 }
 
 button:active {
-    scale: 0.9;
+	scale: 0.9;
 }
 
 /*:root {*/
