--- a/src/styles/RightSection.module.css
+++ b/src/styles/RightSection.module.css
@@ -6,11 +6,14 @@
 
 .info {
 	color: var(--color-info-dark);
-    font-size: 0.80rem;
+	font-size: 0.8rem;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
 }
 
 .profile-name {
-    color: var(--color-dark);
+	color: var(--color-dark);
 }
 
 .right-section {
@@ -19,7 +22,8 @@
 
 .nav {
 	display: flex;
-	justify-content: end;
+	justify-content: flex-end;
+	align-items: center;
 	gap: 2rem;
 }
 
@@ -55,8 +59,8 @@
 
 .nav .profile {
 	display: flex;
-	gap: 2rem;
-	text-align: right;
+	gap: 1rem;
+	text-align: center;
 }
 
 .nav .profile .profile-photo {
@@ -70,13 +74,13 @@
 	display: flex;
 	justify-content: center;
 	text-align: center;
-	margin-top: 1rem;
 	background-color: var(--color-white);
 	padding: var(--card-padding);
 	border-radius: var(--card-border-radius);
 	box-shadow: var(--box-shadow);
 	cursor: pointer;
 	transition: all 0.3s ease;
+	margin-top: 0.8rem;
 }
 
 .user-profile:hover {
@@ -92,7 +96,7 @@
 
 .user-profile-title {
 	margin-bottom: 0.2rem;
-	font-size: 1.2rem;
+	font-size: 1rem;
 	font-weight: 600;
 }
 
