--- a/src/index.css
+++ b/src/index.css
@@ -2,111 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap'); */
-
-:root {
-	--color-primary: #6c9bcf;
-	--color-info: #6c9bcf;
-	--color-danger: red;
-	--color-error: red;
-	--color-success: #1b9c85;
-	--color-warning: #f7d060;
-	--color-white: #fff;
-	--color-info-dark: #7d8da1;
-	--color-dark: #363949;
-	--color-light: rgba(132, 139, 200, 0.18);
-	--color-dark-variant: #677483;
-	--color-background: #f6f6f9;
-
-	--card-border-radius: 2rem;
-	--border-radius-1: 0.4rem;
-	--border-radius-2: 1.2rem;
-
-	--card-padding: 1.8rem;
-	--padding-1: 1.2rem;
-
-	--box-shadow: 0 2rem 3rem var(--color-light);
-}
-
-.dark-mode-variables {
-	--color-background: #181a1e;
-	--color-white: #202528;
-	--color-dark: #edeffd;
-	--color-dark-variant: #a3bdcc;
-	--color-light: rgba(0, 0, 0, 0.4);
-	--box-shadow: 0 2rem 3rem var(--color-light);
-}
-
 body {
-	width: 100vw;
-	height: 100vh;
-	font-family: 'Poppins', sans-serif;
-	font-size: 0.88rem;
-	user-select: none;
-	overflow-x: hidden;
-	color: var(--color-dark);
-	background-color: var(--color-background);
-}
-
-label {
-	font-weight: 600;
-	font-size: 1.2em;
-}
-
-select,
-textarea,
-input[type='text'],
-input[type='date'],
-input[type='number'],
-input[type='email'],
-input[type='file'],
-input[type='password'] {
-	background: var(--color-white);
-	color: var(--color-dark);
-	padding: 0.8rem;
-	border: 1px solid var(--color-dark-variant);
-	border-radius: var(--border-radius-1);
-	width: 100%;
-	margin: 0.8rem 0;
-	outline: none;
-	font-weight: 600;
-	font-size: 1.2em;
-}
-
-button {
-	transition: 0.2s;
-	width: 100%;
-}
-
-button:disabled {
-	color: var(--color-dark-variant);
-	border-color: var(--color-dark-variant);
-}
-
-button:active {
-	scale: 0.9;
-}
-
-#modal-window-overlay {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-color: hsla(0, 0%, 0%, 0.5);
-	z-index: 2;
-}
-
-#modal-window {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	border-radius: var(--border-radius-1);
-	padding: var(--padding-1);
-	background-color: var(--color-white);
-	/* max-width: 600px;
-	max-height: 300px; */
-	overflow-y: scroll;
-	z-index: 3;
+	background-color: #ffffff;
 }
