--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
-@import '../src/styles/Login.css';
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap");
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 :root {
-	--color-primary: #6c9bcf;
 	--color-info: #6c9bcf;
 	--color-danger: red;
 	--color-error: red;
@@ -22,6 +24,7 @@
 
 	--card-padding: 1.8rem;
 	--padding-1: 1.2rem;
+	--padding-1-5: 0.8rem;
 
 	--box-shadow: 0 2rem 3rem var(--color-light);
 }
@@ -35,16 +38,6 @@
 	--box-shadow: 0 2rem 3rem var(--color-light);
 }
 
-* {
-	margin: 0;
-	padding: 0;
-	outline: 0;
-	appearance: 0;
-	border: 0;
-	text-decoration: none;
-	box-sizing: border-box;
-}
-
 html {
 	font-size: 14px;
 }
@@ -52,978 +45,20 @@ html {
 body {
 	width: 100vw;
 	height: 100vh;
-	font-family: 'Poppins', sans-serif;
+	font-family: "Poppins", sans-serif;
 	font-size: 0.88rem;
-	user-select: none;
-	overflow-x: hidden;
 	color: var(--color-dark);
 	background-color: var(--color-background);
-}
-
-a {
-	color: var(--color-dark);
-}
-
-textarea {
-	resize: none;
-}
-
-.table-link {
-	color: var(--color-dark-variant);
-	text-decoration: none;
-}
-
-.table-link:hover {
-	text-decoration: underline;
-}
-
-img {
-	display: block;
-	width: 100%;
-	object-fit: cover;
-}
-
-h1 {
-	font-weight: 800;
-	font-size: 1.8rem;
-}
-
-h2 {
-	font-weight: 600;
-	font-size: 1.4rem;
-}
-
-h3 {
-	font-weight: 500;
-	font-size: 0.87rem;
-}
-
-small {
-	font-size: 0.76rem;
-}
-
-p {
-	color: var(--color-dark-variant);
-}
-
-b {
-	color: var(--color-dark);
-}
-
-.text-muted {
-	color: var(--color-info-dark);
-}
-
-.primary {
-	color: var(--color-primary);
-}
-
-.info {
-	color: var(--color-primary);
-}
-
-.danger {
-	color: var(--color-danger);
-}
-
-.error {
-	color: var(--color-danger);
-}
-
-.success {
-	color: var(--color-success) !important;
-}
-
-.warning {
-	color: var(--color-warning);
-}
-
-.message-container {
-	position: absolute;
-	bottom: 2rem;
-	right: 2rem;
-	padding: 1rem;
-	border-radius: 1rem;
-	border: 1px solid;
-}
-
-.container {
-	display: grid;
-	width: 96%;
-	margin: 0 auto;
-	gap: 1.8rem;
-	grid-template-columns: 12rem auto 23rem;
-}
-
-aside {
-	height: 100vh;
-}
-
-aside .toggle {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	margin-top: 1.4rem;
-}
-
-aside .toggle .logo {
-	display: flex;
-	gap: 0.5rem;
-}
-
-aside .toggle .logo img {
-	width: 2rem;
-	height: 2rem;
-}
-
-aside .toggle .close {
-	padding-right: 1rem;
-	display: none;
-}
-
-aside .sidebar {
-	display: flex;
-	flex-direction: column;
-	background-color: var(--color-white);
-	box-shadow: var(--box-shadow);
-	border-radius: 15px;
-	height: 88vh;
-	position: relative;
-	top: 1.5rem;
-	transition: all 0.3s ease;
-}
-
-aside .sidebar:hover {
-	box-shadow: none;
-}
-
-aside .sidebar a {
-	display: flex;
-	align-items: center;
-	color: var(--color-info-dark);
-	height: 3.7rem;
-	gap: 1rem;
-	position: relative;
-	padding-left: 2rem;
-	transition: all 0.3s ease;
-}
-
-aside .sidebar .download-stats {
-	display: none;
-}
-
-aside .sidebar a span {
-	font-size: 1.6rem;
-	transition: all 0.3s ease;
-}
-
-aside .sidebar a:last-child {
-	position: absolute;
-	bottom: 2rem;
-	width: 100%;
-}
-
-aside .sidebar a.active {
-	width: 100%;
-	color: var(--color-primary);
-	background-color: var(--color-light);
-	margin-left: 0;
-}
-
-aside .sidebar a:first-child.active {
-	border-top-left-radius: 15px;
-	border-top-right-radius: 15px;
-}
-
-aside .sidebar a.active::before {
-	content: '';
-	width: 6px;
-	height: 18px;
-	background-color: var(--color-primary);
-}
-
-aside .sidebar a.active span {
-	color: var(--color-primary);
-	margin-left: calc(1rem - 3px);
-}
-
-aside .sidebar a:hover {
-	color: var(--color-primary);
-}
-
-aside .sidebar a:hover span {
-	margin-left: 0.6rem;
-}
-
-aside .sidebar .message-count {
-	background-color: var(--color-danger);
-	padding: 2px 6px;
-	color: var(--color-white);
-	font-size: 11px;
-	border-radius: var(--border-radius-1);
-}
-
-.add-user {
-	padding: var(--padding-1);
-	border: 2px dashed var(--color-primary);
-	border-radius: var(--border-radius-2);
-}
-
-.modal-active {
-	display: block !important;
-}
-
-.sendSMSModalWindow {
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
-	z-index: 2;
-	display: none;
-	width: 50%;
 }
 
 button {
 	transition: 0.1s;
-	background: none;
-	color: var(--color-dark);
 }
 
 button:active {
-	scale: 0.95;
+	scale: 0.9;
 }
 
-button:hover {
-	cursor: pointer;
-}
-
-.modal-window-shade {
-	display: none;
-	position: absolute;
-	left: 0;
-	top: 0;
-	background-color: var(--color-background);
-	opacity: 0.7;
-	z-index: 999;
-	height: 100%;
-	width: 100%;
-}
-
-.modal-window {
-	display: none;
-	z-index: 1000;
-	position: absolute;
-	max-width: 500px;
-	border-radius: var(--border-radius-2);
-	background-color: var(--color-white);
-	padding: var(--card-padding);
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%, -50%);
-}
-
-.modal-window-top {
-	display: flex;
-	justify-content: end;
-}
-
-.modal-window-top {
-	color: var(--color-dark);
-}
-
-.form-btn-group {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	gap: 10px;
-}
-
-.form-btn-group * {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-}
-
-form .form-confirm-btn {
-	padding: var(--padding-1);
-	border-radius: var(--border-radius-1);
-	border: 1px solid var(--color-danger);
-	color: var(--color-danger);
-	transition: 0.5s;
-}
-
-form .form-confirm-btn:hover {
-	border-color: var(--color-danger);
-	color: white;
-	background: var(--color-danger);
-}
-
-form .form-cancel-btn {
-	padding: var(--padding-1);
-	border-radius: var(--border-radius-1);
-	border: 1px solid var(--color-dark);
-	color: var(--color-dark);
-	transition: 0.5s;
-}
-
-form .form-cancel-btn:hover {
-	border-color: var(--color-dark);
-	color: var(--color-white);
-	background: var(--color-dark);
-}
-
-form .disabled.button.form-confirm-btn {
-	color: var(--color-info-dark);
-	border-color: var(--color-dark-variant);
-}
-
-form .disabled.button.form-confirm-btn:hover {
-	color: var(--color-info-dark);
-	border-color: var(--color-dark);
-	background-color: transparent;
-}
-
-.form-wrapper {
-	height: 100%;
-	margin-top: 1rem;
-}
-
-.signin-form .form {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-}
-
-.signin-form .form h1 {
-	text-align: center;
-}
-
-.form {
-	padding: var(--card-padding);
-	box-shadow: var(--box-shadow);
-	border-radius: var(--card-border-radius);
-	background: var(--color-white);
-}
-
-.notification form {
-	width: 100%;
-}
-
-.notification form select {
-	border: none;
-	font-size: 18px;
-	background: var(--color-white);
-	color: var(--color-dark);
-	padding: 1rem;
-	border: 1px solid var(--color-dark-variant);
-	border-radius: var(--border-radius-1);
-	width: 100%;
-	margin: 1rem 0;
-}
-
-.notification form button {
-	border-radius: var(--border-radius-1);
-	border: 1px solid var(--color-dark);
-	width: 100%;
-	padding: 1rem;
-	transition: 0.1s;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-.notification form button:hover {
-	background: var(--color-dark);
-	color: var(--color-white);
-}
-
-.form select,
-textarea,
-input[type='search'],
-input[type='text'],
-input[type='date'],
-input[type='number'],
-input[type='email'],
-input[type='tel'],
-input[type='file'],
-input[type='password'] {
-	background: var(--color-white);
-	color: var(--color-dark);
-	padding: 1rem;
-	border: 1px solid var(--color-dark-variant);
-	border-radius: var(--border-radius-1);
-	width: 100%;
-	margin: 1rem 0;
-}
-
-.form button {
-	border-radius: var(--border-radius-1);
-	border: 1px solid var(--color-dark);
-	width: 100%;
-	padding: 1rem;
-	transition: 0.1s;
-}
-
-.form button:hover {
-	background: var(--color-dark);
-	color: var(--color-white);
-}
-
-main {
-	margin-top: 1.4rem;
-	height: 88vh;
-}
-
-main .analyse {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	gap: 1.6rem;
-}
-
-main .analyse > div {
-	background-color: var(--color-white);
-	padding: var(--card-padding);
-	border-radius: var(--card-border-radius);
-	margin-top: 1rem;
-	box-shadow: var(--box-shadow);
-	cursor: pointer;
-	transition: all 0.3s ease;
-}
-
-main .analyse > div:hover {
-	box-shadow: none;
-}
-
-main .analyse > div .status {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-}
-
-main .analyse h3 {
-	margin-left: 0.6rem;
-	font-size: 1rem;
-}
-
-main .analyse .progresss {
-	position: relative;
-	width: 92px;
-	height: 92px;
-	border-radius: 50%;
-}
-
-main .analyse svg {
-	width: 7rem;
-	height: 7rem;
-}
-
-main .analyse svg circle {
-	fill: none;
-	stroke-width: 10;
-	stroke-linecap: round;
-	transform: translate(5px, 5px);
-}
-
-main .analyse .sales svg circle {
-	stroke: var(--color-success);
-	stroke-dashoffset: -30;
-	stroke-dasharray: 200;
-}
-
-main .analyse .visits svg circle {
-	stroke: var(--color-danger);
-	stroke-dashoffset: -30;
-	stroke-dasharray: 200;
-}
-
-main .analyse .searches svg circle {
-	stroke: var(--color-primary);
-	stroke-dashoffset: -30;
-	stroke-dasharray: 200;
-}
-
-main .analyse .progresss .percentage {
-	position: absolute;
-	top: -3px;
-	left: -1px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	height: 100%;
-	width: 100%;
-}
-
-main .card-wrapper {
-	height: 90%;
-	overflow: auto;
-	margin-top: 1rem;
-}
-
-.card-wrapper .card a.button.add-button {
-	border: 1px solid var(--color-success);
-	border-radius: var(--border-radius-1);
-	padding: var(--padding-1);
-	transition: 0.5s;
-	color: var(--color-dark);
-}
-
-.card-wrapper .card a.button.add-button:hover {
-	background-color: var(--color-success);
-}
-
-.warning-button {
-	border: 1px solid var(--color-warning);
-	border-radius: var(--border-radius-1);
-	padding: var(--padding-1);
-	transition: 0.5s;
-	color: var(--color-dark);
-}
-
-.warning-button:hover {
-	background-color: var(--color-warning);
-	color: var(--color-dark);
-}
-
-main .card-wrapper .card {
-	background-color: var(--color-white);
-	padding: var(--card-padding);
-	border-radius: var(--card-border-radius);
-	box-shadow: var(--box-shadow);
-	display: flex;
-	flex-wrap: wrap;
-	gap: 1.4rem;
-	cursor: pointer;
-	transition: all 0.3s ease;
-}
-
-main .card-wrapper .card:hover {
-	box-shadow: none;
-}
-
-main .card-wrapper .card .teacher .user-controls {
-	margin-top: 5px;
-	display: flex;
-	flex-direction: row;
-	gap: 5px;
-}
-
-main .card-wrapper .card .teacher .user-controls a {
-	padding: 5px 10px;
-	border: 1px solid transparent;
-	border-radius: var(--border-radius-1);
-	transition: 0.5s;
-	color: var(--color-dark);
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-main .card-wrapper .card .teacher .user-controls a:first-child:hover {
-	background: var(--color-warning);
-	border-color: var(--color-warning);
-}
-
-main .card-wrapper .card .teacher .user-controls a:last-child:hover {
-	background: var(--color-danger);
-	border-color: var(--color-danger);
-}
-
-main .recent-orders {
-	margin-top: 1.3rem;
-}
-
-main .recent-orders h2 {
-	margin-bottom: 0.8rem;
-}
-
-.row-change-controller {
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-}
-
-.card-wrapper .card table {
-	font-family: 'Poppins', sans-serif;
-	border-collapse: collapse;
-	width: 100%;
-}
-
-.card-wrapper .card .group-pupils tr td:nth-child(2),
-.card-wrapper .card .pupils-table tr td:nth-child(2) {
-	max-width: 100px;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-	overflow: hidden;
-}
-
-.card-wrapper .card table td,
-.card-wrapper .card table th {
-	border-bottom: 1px solid var(--color-info-dark);
-	padding: 8px;
-}
-
-.card-wrapper .card table tr td.manage-pupil span {
-	padding: 5px 10px;
-	margin: 0 5px;
-	border-radius: var(--border-radius-1);
-	border: 1px solid transparent;
-	transition: 0.5s;
-}
-
-.card-wrapper .card table tr td.manage-pupil a:nth-child(1) span:hover {
-	border: 1px solid var(--color-warning);
-	background-color: var(--color-warning);
-}
-
-.card-wrapper .card table tr td.manage-pupil a:nth-child(2) span:hover {
-	border: 1px solid var(--color-danger);
-	background-color: var(--color-danger);
-}
-
-.card-wrapper .card table tr td.manage-pupil a:nth-child(3) span:hover {
-	border: 1px solid var(--color-success);
-	background-color: var(--color-success);
-}
-
-.card-wrapper .card table th {
-	padding-top: 12px;
-	padding-bottom: 12px;
-	text-align: left;
-	background-color: var(--color-white);
-	color: var(--color-info-dark);
-}
-
-.card-wrapper .card table td {
-	color: var(--color-info-dark);
-}
-
-main .recent-orders a {
-	text-align: center;
-	display: block;
-	margin: 1rem auto;
-	color: var(--color-primary);
-}
-
-.right-section {
-	margin-top: 1.4rem;
-}
-
-.right-section .nav {
-	display: flex;
-	justify-content: end;
-	gap: 2rem;
-}
-
-.right-section .nav button {
-	display: none;
-}
-
-.right-section .dark-mode {
-	background-color: var(--color-light);
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	height: 1.6rem;
-	width: 4.2rem;
-	cursor: pointer;
-	border-radius: var(--border-radius-1);
-}
-
-.right-section .dark-mode span {
-	font-size: 1.2rem;
-	width: 50%;
-	height: 100%;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-.right-section .dark-mode span.active {
-	background-color: var(--color-primary);
-	color: white;
-	border-radius: var(--border-radius-1);
-}
-
-.right-section .nav .profile {
-	display: flex;
-	gap: 2rem;
-	text-align: right;
-}
-
-.right-section .nav .profile .profile-photo {
-	width: 2.8rem;
-	height: 2.8rem;
-	border-radius: 50%;
-	overflow: hidden;
-}
-
-.right-section .user-profile {
-	display: flex;
-	justify-content: center;
-	text-align: center;
-	margin-top: 1rem;
-	background-color: var(--color-white);
-	padding: var(--card-padding);
-	border-radius: var(--card-border-radius);
-	box-shadow: var(--box-shadow);
-	cursor: pointer;
-	transition: all 0.3s ease;
-}
-
-.right-section .user-profile:hover {
-	box-shadow: none;
-}
-
-.right-section .user-profile img {
-	width: 11rem;
-	height: auto;
-	margin-bottom: 0.8rem;
-	border-radius: 50%;
-}
-
-.right-section .user-profile h2 {
-	margin-bottom: 0.2rem;
-}
-
-.right-section .reminders {
-	margin-top: 2rem;
-}
-
-.right-section .reminders .header {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	margin-bottom: 0.8rem;
-}
-
-.right-section .reminders .header span {
-	padding: 10px;
-	box-shadow: var(--box-shadow);
-	background-color: var(--color-white);
-	border-radius: 50%;
-}
-
-.right-section .reminders .notification {
-	background-color: var(--color-white);
-	display: flex;
-	align-items: center;
-	gap: 1rem;
-	margin-bottom: 0.7rem;
-	padding: 1.4rem var(--card-padding);
-	border-radius: var(--border-radius-2);
-	box-shadow: var(--box-shadow);
-	cursor: pointer;
-	transition: all 0.3s ease;
-}
-
-.right-section .reminders .notification:hover {
-	box-shadow: none;
-}
-
-.right-section .reminders .notification .content {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	margin: 0;
-	width: 100%;
-}
-
-.right-section .reminders .notification .icon {
-	padding: 0.6rem;
-	color: var(--color-white);
-	background-color: var(--color-success);
-	border-radius: 20%;
-	display: flex;
-}
-
-.right-section .reminders .notification.deactive .icon {
-	background-color: var(--color-danger);
-}
-
-.right-section .reminders .add-reminder {
-	background-color: var(--color-white);
-	border: 2px dashed var(--color-primary);
-	color: var(--color-primary);
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	cursor: pointer;
-}
-
-.right-section .reminders .add-reminder:hover {
-	background-color: var(--color-primary);
-	color: white;
-}
-
-.right-section .reminders .add-reminder div {
-	display: flex;
-	align-items: center;
-	gap: 0.6rem;
-}
-
-@media screen and (max-width: 1200px) {
-	.container {
-		width: 95%;
-		grid-template-columns: 7rem auto 23rem;
-	}
-
-	aside .logo h2 {
-		display: none;
-	}
-
-	aside .sidebar h3 {
-		display: none;
-	}
-
-	aside .sidebar a {
-		width: 5.6rem;
-	}
-
-	aside .sidebar a:last-child {
-		position: relative;
-		margin-top: 1.8rem;
-	}
-
-	main .analyse {
-		grid-template-columns: 1fr;
-		gap: 0;
-	}
-
-	main .card-wrapper .card .user {
-		flex-basis: 40%;
-	}
-
-	aside .toggle {
-		justify-content: center;
-	}
-}
-
-@media screen and (max-width: 768px) {
-	.container {
-		width: 100%;
-		grid-template-columns: 1fr;
-		padding: 0 var(--padding-1);
-	}
-
-	aside .toggle {
-		justify-content: space-between;
-	}
-
-	aside {
-		position: fixed;
-		background-color: var(--color-white);
-		width: 15rem;
-		z-index: 3;
-		box-shadow: 1rem 3rem 4rem var(--color-light);
-		height: 100vh;
-		left: -100%;
-		display: none;
-		animation: showMenu 0.4s ease forwards;
-	}
-
-	@keyframes showMenu {
-		to {
-			left: 0;
-		}
-	}
-
-	aside .logo {
-		margin-left: 1rem;
-	}
-
-	aside .logo h2 {
-		display: inline;
-	}
-
-	aside .sidebar h3 {
-		display: inline;
-	}
-
-	aside .sidebar a {
-		width: 100%;
-		height: 3.4rem;
-	}
-
-	aside .sidebar a:last-child {
-		position: absolute;
-		bottom: 5rem;
-	}
-
-	aside .toggle .close {
-		display: inline-block;
-		cursor: pointer;
-	}
-
-	main {
-		margin-top: 8rem;
-		padding: 0 1rem;
-	}
-
-	main .card-wrapper .card .teacher {
-		flex-basis: 35%;
-	}
-
-	main .recent-orders {
-		position: relative;
-		margin: 3rem 0 0 0;
-		width: 100%;
-	}
-
-	.right-section {
-		width: 94%;
-		margin: 0 auto 4rem;
-	}
-
-	.right-section .nav {
-		position: fixed;
-		top: 0;
-		left: 0;
-		align-items: center;
-		background-color: var(--color-white);
-		padding: 0 var(--padding-1);
-		height: 4.6rem;
-		width: 100%;
-		z-index: 2;
-		box-shadow: 0 1rem 1rem var(--color-light);
-		margin: 0;
-	}
-
-	.right-section .nav .dark-mode {
-		width: 4.4rem;
-		position: absolute;
-		left: 66%;
-	}
-
-	.right-section .profile .info {
-		display: none;
-	}
-
-	.right-section .nav button {
-		display: inline-block;
-		background-color: transparent;
-		cursor: pointer;
-		color: var(--color-dark);
-		position: absolute;
-		left: 1rem;
-	}
-
-	.right-section .nav button span {
-		font-size: 2rem;
-	}
-
-	main .dashboard {
-		width: 100%;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-	}
-
-	main .dashboard h2 {
-		text-align: center;
-	}
-
-	main .dashboard div {
-		width: 70%;
-	}
+button:focus {
+	outline: 2px solid var(--color-dark);
 }
