--- a/src/styles/Input.module.css
+++ b/src/styles/Input.module.css
@@ -5,6 +5,10 @@
 	padding: 23px 18px 10px;
 }
 
+.inputGroup select {
+	padding: 23px 12px 10px;
+}
+
 .inputGroup label {
 	position: absolute;
 	top: 50%;
@@ -13,9 +17,9 @@
 	transition: 0.2s;
 }
 
-.inputGroup input:focus ~ label,
-.inputGroup input:not(:placeholder-shown) ~ label {
+.inputGroup input:focus ~ label, .inputGroup select:focus ~ label,
+.inputGroup input:not(:placeholder-shown) ~ label, .inputGroup select:not(:placeholder-shown) ~ label {
 	top: 16px;
-	left: 18px;
+	left: 1.2rem;
 	font-size: 11px;
 }
